Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -30,6 +30,22 @@
       <img src="sample2.jpg.jpeg" alt="T-Shirt Design">
       <img src="sample3.jpg.jpeg" alt="Vehicle Branding">
       <img src="sample4.jpg.jpeg" alt="Office Branding">
+      <img src="sample5.jpeg,jpeg.jpeg" alt="embroidery">
+      <img src="sample6.jpeg.jpeg.jpeg" alt="emb">
+      <img src="sample7.jpeg.jpeg.jpeg" alt="backdrop">
+      <img src="sample8.jpeg.jpeg.jpeg" alt="canvas">
+      <img src="sample9.jpeg,jpeg.jpeg" alt="flyers">
+      <img src="sample10.jpeg.jpeg.jpeg" alt="image to vector">
+      <img src="sample11.jpeg.jpeg.jpeg" alt="services">
+      <img src="sample12.jpeg.jpeg.jpeg" alt="pull up banner">
+      <img src="sample13.peg.jpeg.jpeg" alt="food singn">
+      <img src="sample14.jpe.jpeg.jpeg" alt="cap Branding">
+      <img src="sample15.jpeg.jpeg.jpeg" alt="cap">
+      <img src="sample16.jpeg.jpeg.jpeg" alt="stickers">
+      <img src="sample17.jpeg.jpeg.jpeg" alt="pen Branding">
+      <img src="sample18.jpeg.jpeg.jpeg" alt="ball Branding">
+      <img src="sample19.jpeg.jpeg.jpeg" alt="bottle">
+      <img src="sample20.jpeg.jpeg.jpeg" alt="tshirt2">
     </div>
   </section>
 
