--- a/3html.html
+++ b/3html.html
@@ -81,22 +81,23 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="sample1.jpg" alt="Logo Design">
-      <img src="sample2.jpg" alt="T-Shirt Design">
-      <img src="sample3.jpg" alt="Vehicle Branding">
-      <img src="sample4.jpg" alt="Office Branding">
-      <img src="sample5.jpg" alt="Embroidery">
-      <img src="sample6.jpg" alt="Backdrop">
-      <img src="sample7.jpg" alt="Canvas Print">
-      <img src="sample8.jpg" alt="Flyer Design">
-      <img src="sample9.jpg" alt="Vector Design">
-      <img src="sample10.jpg" alt="Pull-up Banner">
-      <img src="sample11.jpg" alt="Cap Branding">
-      <img src="sample12.jpg" alt="Sticker Printing">
-      <img src="sample13.jpg" alt="Pen Branding">
-      <img src="sample14.jpg" alt="Bottle Branding">
-      <img src="sample15.jpg" alt="T-shirt Printing">
-    </div>
+  <img src="images/sample1.jpg" alt="Logo Design">
+  <img src="images/sample2.jpg" alt="T-Shirt Design">
+  <img src="images/sample3.jpg" alt="Vehicle Branding">
+  <img src="images/sample4.jpg" alt="Office Branding">
+  <img src="images/sample5.jpg" alt="Embroidery">
+  <img src="images/sample6.jpg" alt="Backdrop">
+  <img src="images/sample7.jpg" alt="Canvas Print">
+  <img src="images/sample8.jpg" alt="Flyer Design">
+  <img src="images/sample9.jpg" alt="Vector Design">
+  <img src="images/sample10.jpg" alt="Pull-up Banner">
+  <img src="images/sample11.jpg" alt="Cap Branding">
+  <img src="images/sample12.jpg" alt="Sticker Printing">
+  <img src="images/sample13.jpg" alt="Pen Branding">
+  <img src="images/sample14.jpg" alt="Bottle Branding">
+  <img src="images/sample15.jpg" alt="T-shirt Printing">
+</div>
+
   </section>
 
   <footer>
