--- a/3html.html
+++ b/3html.html
@@ -6,7 +6,39 @@
   <title>HB Graphics Zambia | Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* Centering and responsive gallery styling */
+    /* General Page Styling */
+    body {
+      background-color: #f9f9f9;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Header and Logo */
+    header {
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    header .logo img {
+      width: 380px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
+    header h1 {
+      font-size: 2rem;
+      color: #c00;
+      margin-top: 10px;
+    }
+
+    /* Gallery Section */
+    .portfolio {
+      text-align: center;
+      padding: 20px;
+    }
+
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -18,7 +50,7 @@
     .gallery img {
       width: 220px;
       height: 220px;
-      object-fit: cover; /* keeps all images uniform without distortion */
+      object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -29,31 +61,23 @@
       box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
     }
 
+    /* Responsive for mobile screens */
     @media (max-width: 768px) {
       .gallery img {
-        width: 150px;
-        height: 150px;
+        width: 45%;
+        height: auto;
+      }
+
+      header .logo img {
+        width: 280px;
+      }
+
+      header h1 {
+        font-size: 1.6rem;
       }
     }
 
-    header .logo img {
-      width: 300px;
-      height: auto;
-    }
-
-    header h1 {
-      font-size: 2rem;
-      text-align: center;
-      color: #c00;
-    }
-
-    body {
-      background-color: #f9f9f9;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
+    /* Footer */
     footer {
       text-align: center;
       padding: 20px;
@@ -61,17 +85,14 @@
       color: white;
       margin-top: 30px;
     }
-
-    h2, p {
-      text-align: center;
-    }
   </style>
 </head>
+
 <body>
   <header>
     <nav>
       <div class="logo">
-        <img src="logo.png.jpeg" alt="HB Graphics Logo">
+        <img src="images/logo.png.jpeg" alt="HB Graphics Logo">
         <h1>HB Graphics Zambia</h1>
       </div>
     </nav>
@@ -81,23 +102,22 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-  <img src="images/sample1.jpg" alt="Logo Design">
-  <img src="images/sample2.jpg" alt="T-Shirt Design">
-  <img src="images/sample3.jpg" alt="Vehicle Branding">
-  <img src="images/sample4.jpg" alt="Office Branding">
-  <img src="images/sample5.jpg" alt="Embroidery">
-  <img src="images/sample6.jpg" alt="Backdrop">
-  <img src="images/sample7.jpg" alt="Canvas Print">
-  <img src="images/sample8.jpg" alt="Flyer Design">
-  <img src="images/sample9.jpg" alt="Vector Design">
-  <img src="images/sample10.jpg" alt="Pull-up Banner">
-  <img src="images/sample11.jpg" alt="Cap Branding">
-  <img src="images/sample12.jpg" alt="Sticker Printing">
-  <img src="images/sample13.jpg" alt="Pen Branding">
-  <img src="images/sample14.jpg" alt="Bottle Branding">
-  <img src="images/sample15.jpg" alt="T-shirt Printing">
-</div>
-
+      <img src="images/sample1.jpg" alt="Logo Design">
+      <img src="images/sample2.jpg" alt="T-Shirt Design">
+      <img src="images/sample3.jpg" alt="Vehicle Branding">
+      <img src="images/sample4.jpg" alt="Office Branding">
+      <img src="images/sample5.jpg" alt="Embroidery">
+      <img src="images/sample6.jpg" alt="Backdrop">
+      <img src="images/sample7.jpg" alt="Canvas Print">
+      <img src="images/sample8.jpg" alt="Flyer Design">
+      <img src="images/sample9.jpg" alt="Vector Design">
+      <img src="images/sample10.jpg" alt="Pull-up Banner">
+      <img src="images/sample11.jpg" alt="Cap Branding">
+      <img src="images/sample12.jpg" alt="Sticker Printing">
+      <img src="images/sample13.jpg" alt="Pen Branding">
+      <img src="images/sample14.jpg" alt="Bottle Branding">
+      <img src="images/sample15.jpg" alt="T-shirt Printing">
+    </div>
   </section>
 
   <footer>
