--- a/3html.html
+++ b/3html.html
@@ -102,21 +102,21 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="images/sample1.jpg" alt="Logo Design">
-      <img src="images/sample2.jpg" alt="T-Shirt Design">
-      <img src="images/sample3.jpg" alt="Vehicle Branding">
-      <img src="images/sample4.jpg" alt="Office Branding">
-      <img src="images/sample5.jpg" alt="Embroidery">
-      <img src="images/sample6.jpg" alt="Backdrop">
-      <img src="images/sample7.jpg" alt="Canvas Print">
-      <img src="images/sample8.jpg" alt="Flyer Design">
-      <img src="images/sample9.jpg" alt="Vector Design">
-      <img src="images/sample10.jpg" alt="Pull-up Banner">
-      <img src="images/sample11.jpg" alt="Cap Branding">
-      <img src="images/sample12.jpg" alt="Sticker Printing">
-      <img src="images/sample13.jpg" alt="Pen Branding">
-      <img src="images/sample14.jpg" alt="Bottle Branding">
-      <img src="images/sample15.jpg" alt="T-shirt Printing">
+      <img src="images/sample1.jpeg" alt="Logo Design">
+      <img src="images/sample2.jpeg" alt="T-Shirt Design">
+      <img src="images/sample3.jpeg" alt="Vehicle Branding">
+      <img src="images/sample4.jpeg" alt="Office Branding">
+      <img src="images/sample5.jpeg" alt="Embroidery">
+      <img src="images/sample6.jpeg" alt="Backdrop">
+      <img src="images/sample7.jpeg" alt="Canvas Print">
+      <img src="images/sample8.jpeg" alt="Flyer Design">
+      <img src="images/sample9.jpeg" alt="Vector Design">
+      <img src="images/sample10.jpeg" alt="Pull-up Banner">
+      <img src="images/sample11.jpeg" alt="Cap Branding">
+      <img src="images/sample12.jpeg" alt="Sticker Printing">
+      <img src="images/sample13.jpeg" alt="Pen Branding">
+      <img src="images/sample14.jpeg" alt="Bottle Branding">
+      <img src="images/sample15.jpeg" alt="T-shirt Printing">
     </div>
   </section>
 
