Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -82,7 +82,7 @@
     <p>Here are some of the samples:</p>
     <div class="gallery">
       <img src="sample1.jpg" alt="Logo Design">
-      <img src="sample2.jpg" alt="T-Shirt Design">
+      <img src="sample2.jpg.jpg.jpeg" alt="T-Shirt Design">
       <img src="sample3.jpg" alt="Vehicle Branding">
       <img src="sample4.jpg" alt="Office Branding">
       <img src="sample5.jpg" alt="Embroidery">
