Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -82,9 +82,8 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="images/sample1.jpg" alt="Logo Design" />
-      <img src="images/sample2.jpg" alt="T-Shirt Design" />
-      <img src="images/sample3.jpg" alt="Vehicle Branding" />
+      <img src="images/sample2.jpg.jpg.jpg" alt="T-Shirt Design" />
+      <img src="images/sample3.jpg.jpg" alt="Vehicle Branding" />
       <img src="images/sample4.jpg" alt="Office Branding" />
       <img src="images/sample5.jpg" alt="Embroidery" />
       <img src="images/sample6.jpg" alt="Backdrop" />
