--- a/3html.html
+++ b/3html.html
@@ -92,7 +92,7 @@
   <header>
     <nav>
       <div class="logo">
-        <img src="images/logo.png.jpeg" alt="HB Graphics Logo">
+        <img src="images/logo.png" alt="HB Graphics Logo">
         <h1>HB Graphics Zambia</h1>
       </div>
     </nav>
