Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -83,7 +83,7 @@
     <p>Here are some of the samples:</p>
     <div class="gallery">
       <img src="images/sample1.jpeg" alt="Logo Design" />
-      <img src="images/sample2.jpeg" alt="T-Shirt Design" />
+      <img src="images/sample2.jpeg.jpeg" alt="T-Shirt Design" />
       <img src="images/sample3.jpeg" alt="Vehicle Branding" />
       <img src="images/sample4.jpeg" alt="Office Branding" />
       <img src="images/sample5.jpeg" alt="Embroidery" />
