Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -82,21 +82,21 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="images/sample1.jpeg" alt="Logo Design" />
-      <img src="images/sample2.jpeg.jpeg" alt="T-Shirt Design" />
-      <img src="images/sample3.jpeg" alt="Vehicle Branding" />
-      <img src="images/sample4.jpeg" alt="Office Branding" />
-      <img src="images/sample5.jpeg" alt="Embroidery" />
-      <img src="images/sample6.jpeg" alt="Backdrop" />
-      <img src="images/sample7.jpeg" alt="Canvas Print" />
-      <img src="images/sample8.jpeg" alt="Flyer Design" />
-      <img src="images/sample9.jpeg" alt="Vector Design" />
-      <img src="images/sample10.jpeg" alt="Pull-up Banner" />
-      <img src="images/sample11.jpeg" alt="Cap Branding" />
-      <img src="images/sample12.jpeg" alt="Sticker Printing" />
-      <img src="images/sample13.jpeg" alt="Pen Branding" />
-      <img src="images/sample14.jpeg" alt="Bottle Branding" />
-      <img src="images/sample15.jpeg" alt="T-shirt Printing" />
+      <img src="sample1.jpeg" alt="Logo Design" />
+      <img src="sample2.jpeg" alt="T-Shirt Design" />
+      <img src="sample3.jpeg" alt="Vehicle Branding" />
+      <img src="sample4.jpeg" alt="Office Branding" />
+      <img src="sample5.jpeg" alt="Embroidery" />
+      <img src="sample6.jpeg" alt="Backdrop" />
+      <img src="sample7.jpeg" alt="Canvas Print" />
+      <img src="sample8.jpeg" alt="Flyer Design" />
+      <img src="sample9.jpeg" alt="Vector Design" />
+      <img src="sample10.jpeg" alt="Pull-up Banner" />
+      <img src="sample11.jpeg" alt="Cap Branding" />
+      <img src="sample12.jpeg" alt="Sticker Printing" />
+      <img src="sample13.jpeg" alt="Pen Branding" />
+      <img src="sample14.jpeg" alt="Bottle Branding" />
+      <img src="sample15.jpeg" alt="T-shirt Printing" />
     </div>
   </section>
 
