--- a/3html.html
+++ b/3html.html
@@ -83,7 +83,7 @@
     <p>Here are some of the samples:</p>
     <div class="gallery">
       <img src="sample1.jpeg" alt="Logo Design" />
-      <img src="sample2.jpeg.jpeg" alt="T-Shirt Design" />
+      <img src="sample2.png.jpeg" alt="T-Shirt Design" />
       <img src="sample3.jpeg" alt="Vehicle Branding" />
       <img src="sample4.jpeg" alt="Office Branding" />
       <img src="sample5.jpeg" alt="Embroidery" />
