Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -84,19 +84,19 @@
     <div class="gallery">
       <img src="sample1.jpeg" alt="Logo Design" />
       <img src="hb.jpg.jpeg" alt="T-Shirt Design" />
-      <img src="sample3.jpeg" alt="Vehicle Branding" />
-      <img src="sample4.jpeg" alt="Office Branding" />
-      <img src="sample5.jpeg" alt="Embroidery" />
-      <img src="sample6.jpeg" alt="Backdrop" />
-      <img src="sample7.jpeg" alt="Canvas Print" />
-      <img src="sample8.jpeg" alt="Flyer Design" />
-      <img src="sample9.jpeg" alt="Vector Design" />
-      <img src="sample10.jpeg" alt="Pull-up Banner" />
-      <img src="sample11.jpeg" alt="Cap Branding" />
-      <img src="sample12.jpeg" alt="Sticker Printing" />
-      <img src="sample13.jpeg" alt="Pen Branding" />
-      <img src="sample14.jpeg" alt="Bottle Branding" />
-      <img src="sample15.jpeg" alt="T-shirt Printing" />
+      <img src="car.jpg.jpeg" alt="Vehicle Branding" />
+      <img src="sample4.jpeg.jpeg" alt="Office Branding" />
+      <img src="sample5.jpeg.jpeg" alt="Embroidery" />
+      <img src="sample6.jpeg.jpeg" alt="Backdrop" />
+      <img src="sample7.jpeg.jpeg" alt="Canvas Print" />
+      <img src="sample8.jpeg.jpeg" alt="Flyer Design" />
+      <img src="sample9.jpeg.jpeg" alt="Vector Design" />
+      <img src="sample10.jpeg.jpeg" alt="Pull-up Banner" />
+      <img src="sample11.jpeg.jpeg" alt="Cap Branding" />
+      <img src="sample12.jpeg.jpeg" alt="Sticker Printing" />
+      <img src="sample13.jpeg.jpeg" alt="Pen Branding" />
+      <img src="sample14.jpeg.jpeg" alt="Bottle Branding" />
+      <img src="sample15.jpeg.jpeg" alt="T-shirt Printing" />
     </div>
   </section>
 
