Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -108,7 +108,7 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="sample1.jpeg" alt="Logo Design" />
+      <img src="sample1.jpeg.jpeg" alt="Logo Design" />
       <img src="hb.jpg.jpeg" alt="T-Shirt Design" />
       <img src="car.jpg.jpeg" alt="Vehicle Branding" />
       <img src="sample4.jpeg.jpeg" alt="Office Branding" />
