Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -102,7 +102,6 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="sample1.jpeg" alt="Logo Design" />
       <img src="hb.jpg.jpeg" alt="T-Shirt Design" />
       <img src="car.jpg.jpeg" alt="Vehicle Branding" />
       <img src="sample4.jpeg.jpeg" alt="Office Branding" />
@@ -121,10 +120,10 @@
 
     <div class="social-icons">
       <a href="https://www.facebook.com/profile.php?id=100083687825364" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-        <img src="facebook-icon.png" alt="Facebook" />
+        <img src="facebook-icon.png.png" alt="Facebook" />
       </a>
       <a href="https://vm.tiktok.com/ZMHcmLPRNxbxm-Nfr7j/" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
-        <img src="tiktok-icon.png" alt="TikTok" />
+        <img src="tiktok-icon.png.png" alt="TikTok" />
       </a>
     </div>
   </section>
