Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -105,7 +105,6 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-      <img src="sample1.jpeg" alt="Logo Design" />
       <img src="hb.jpg.jpeg" alt="T-Shirt Design" />
       <img src="car.jpg.jpeg" alt="Vehicle Branding" />
       <img src="sample4.jpeg.jpeg" alt="Office Branding" />
@@ -125,10 +124,10 @@
     <!-- Social Media Icons -->
     <div class="social-icons">
       <a href="https://www.facebook.com/profile.php?id=100083687825364" target="_blank" rel="noopener noreferrer" title="Facebook">
-        <img src="facebook.png" alt="Facebook Icon" />
+        <img src="facebook-icon.png.png" alt="Facebook Icon" />
       </a>
       <a href="https://vm.tiktok.com/ZMHcmLPRNxbxm-Nfr7j/" target="_blank" rel="noopener noreferrer" title="TikTok">
-        <img src="tiktok.png" alt="TikTok Icon" />
+        <img src="tiktok-icon.png.png" alt="TikTok Icon" />
       </a>
     </div>
   </section>
