Updated page names and links on homepage

--- a/3html.html
+++ b/3html.html
@@ -35,7 +35,7 @@
       height: 220px;
       object-fit: cover;
       border-radius: 10px;
-      user-select: none; /* Prevent dragging */
+      user-select: none; /* Prevent dragging/selecting */
       pointer-events: none; /* Disable image drag */
     }
 
@@ -117,7 +117,6 @@
     <h2>Our Portfolio</h2>
     <p>Here are some of the samples:</p>
     <div class="gallery">
-        </a>
       <a href="hb.jpg.jpeg" target="_blank" rel="noopener noreferrer">
         <img src="hb.jpg.jpeg" alt="T-Shirt Design" />
       </a>
